log
Thu 11 May 2023 04:26:36 PM UTC: 
 tests:  0|4
total_score: 0/70
2e3f818
Thu 11 May 2023 04:39:45 PM UTC: 
 heap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:7: error: unused variable ‘mayorPrioridad’ [-Werror=unused-variable]
   21 | Heap *mayorPrioridad;
      |       ^~~~~~~~~~~~~~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
heap.c: In function ‘createHeap’:
heap.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3967278
Thu 11 May 2023 04:40:08 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
62fc76b
Thu 11 May 2023 04:40:21 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
80f6cbe
Thu 11 May 2023 04:41:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
e25b642
Thu 11 May 2023 04:45:20 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
a275032
Thu 11 May 2023 04:54:33 PM UTC: 
 heap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  2|2
total_score: 20/70
287b910
Thu 11 May 2023 05:14:38 PM UTC: 
 heap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:52:9: error: unused variable ‘padre’ [-Werror=unused-variable]
   52 |     int padre = trunc(posicion-1)/2;
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
3dee99b
Thu 11 May 2023 05:15:02 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:52:9: error: unused variable ‘padre’ [-Werror=unused-variable]
   52 |     int padre = (posicion-1)/2;
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
233ca8b
Thu 11 May 2023 05:15:42 PM UTC: 
 heap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:51:9: error: unused variable ‘padre’ [-Werror=unused-variable]
   51 |     int padre = (posicion-1)/2;
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
cf5f083
Thu 11 May 2023 05:19:33 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:29:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   29 |   if(pq->size == pq->capac)
      |   ^~
heap.c:31:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   31 |     pq->capac = (pq->capac*2)+1;
      |     ^~
heap.c:52:9: error: unused variable ‘padre’ [-Werror=unused-variable]
   52 |     int padre = (posicion-1)/2;
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
86bec38
Thu 11 May 2023 05:19:50 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:54:9: error: unused variable ‘padre’ [-Werror=unused-variable]
   54 |     int padre = (posicion-1)/2;
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
02d477f
Thu 11 May 2023 05:20:08 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
05c4a1c
Thu 11 May 2023 05:20:48 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
af7f329
Thu 11 May 2023 05:21:20 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
3dbf69b
Thu 11 May 2023 05:23:07 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
570e5ea
Thu 11 May 2023 05:28:49 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
16d8262
Thu 11 May 2023 05:29:22 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
25e7f87
Thu 11 May 2023 05:31:20 PM UTC: 
 heap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:66:12: error: unused variable ‘aux’ [-Werror=unused-variable]
   66 |   heapElem aux;
      |            ^~~
heap.c:65:7: error: unused variable ‘hijoDer’ [-Werror=unused-variable]
   65 |   int hijoDer = 2*pos+2;
      |       ^~~~~~~
heap.c:64:7: error: unused variable ‘hijoIzq’ [-Werror=unused-variable]
   64 |   int hijoIzq = 2*pos+1;
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
31af955
Sat 13 May 2023 11:27:42 PM UTC: 
 heap.c | 38 ++++++++++++++++++++++++++------------
 1 file changed, 26 insertions(+), 12 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/cc91iMn7.o: in function `test_create':
test.c:(.text+0x296): undefined reference to `createHeap'
collect2: error: ld returned 1 exit status
Compilation failed
d36f5bf
Sat 13 May 2023 11:28:42 PM UTC: 
 heap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  8|0
total_score: 70/70
6d7a264
